--- a/web/public/styles/backgroundmenu.css
+++ b/web/public/styles/backgroundmenu.css
@@ -79,6 +79,7 @@ body {
       margin: 0;
       padding: 0;
       min-height: 100vh; /* Ensures the body is at least the full viewport height */
+      background-color: white;
       background-image: 'none'; /* Path to the 1920x1080 image */
       background-size: cover; /* Scales the image to cover the entire window */
       background-repeat: no-repeat;
